--- a/dotfiles.org
+++ b/dotfiles.org
@@ -1,8 +1,8 @@
-
 #+TITLE: Dotfiles
 #+AUTHOR: Martín Alsinet
 #+DATE: 2017
 #+OPTIONS: toc:nil ':t num:nil
+#+PROPERTY: header-args:sh :results drawer
 #+LANGUAGE: en
 
 * bashrc
@@ -43,20 +43,26 @@ Mis configuración de *emacs* se encuentra en los archivos:
 - [[file:emacs-config.org][emacs-config.org]]
 
 * Paquetes
-*** Mac OS X (brew)
+*** Mac OS X (homebrew)
 **** Paquetes instalados
 
+Guardamos en el archivo =./build/brew-packages.txt= los paquetes actualmente instalados.
+
 #+BEGIN_SRC sh
-brew list > packages-brew.txt
+brew list > build/brew-packages.txt
 #+END_SRC
+
+Cargamos en la variable =packages= el contenido del archivo con el listado de paquetes
 
 #+NAME: packages
 #+BEGIN_SRC sh
-cat packages-brew.txt | tr "\n" " " 
+cat build/brew-packages.txt | tr "\n" " " 
 #+END_SRC
 
 #+RESULTS: packages
-: ack adns aspell autoconf automake bdw-gc dos2unix emacs ffmpeg gdbm gettext ghostscript glib gmp gnu-typist gnupg gnutls jpeg lame libassuan libffi libgcrypt libgpg-error libksba libpng libssh2 libtasn1 libtiff libunistring libusb libvo-aacenc links little-cms2 midnight-commander nettle nmap npth openssl openssl@1.1 p11-kit pcre pinentry pkg-config readline s-lang shpotify sqlite ssh-copy-id unrar w3m x264 xvid xz
+:results:
+ack adns aspell autoconf automake bash-completion bdw-gc ctags dos2unix emacs ffmpeg freetype gdbm gettext ghostscript git-flow-avh glib gmp gnu-getopt gnu-typist gnupg gnutls icu4c jpeg lame libassuan libevent libffi libgcrypt libgpg-error libidn2 libksba libpng libssh2 libtasn1 libtiff libtool libunistring libusb libvo-aacenc links little-cms2 midnight-commander nettle nmap node npth ntfs-3g openssl openssl@1.1 p11-kit pcre pinentry pkg-config prettier python readline s-lang sqlite ssh-copy-id tnftp unbound unrar w3m wget x264 xvid xz 
+:end:
 
 **** Instalar
 
@@ -65,7 +71,9 @@ echo brew install $pkg
 #+END_SRC
 
 #+RESULTS:
-: ack adns aspell autoconf automake bdw-gc dos2unix emacs ffmpeg gdbm gettext ghostscript glib gmp gnu-typist gnupg gnutls jpeg lame libassuan libffi libgcrypt libgpg-error libksba libpng libssh2 libtasn1 libtiff libunistring libusb libvo-aacenc links little-cms2 midnight-commander nettle nmap npth openssl openssl@1.1 p11-kit pcre pinentry pkg-config readline s-lang shpotify sqlite ssh-copy-id unrar w3m x264 xvid xz
+:results:
+brew install ack adns aspell autoconf automake bash-completion bdw-gc ctags dos2unix emacs ffmpeg freetype gdbm gettext ghostscript git-flow-avh glib gmp gnu-getopt gnu-typist gnupg gnutls icu4c jpeg lame libassuan libevent libffi libgcrypt libgpg-error libidn2 libksba libpng libssh2 libtasn1 libtiff libtool libunistring libusb libvo-aacenc links little-cms2 midnight-commander nettle nmap node npth ntfs-3g openssl openssl@1.1 p11-kit pcre pinentry pkg-config prettier python readline s-lang sqlite ssh-copy-id tnftp unbound unrar w3m wget x264 xvid xz
+:end:
 
 **** Actualizar
 
