--- a/emacs-config.org
+++ b/emacs-config.org
@@ -87,23 +87,19 @@
 #+RESULTS:
 
 * Backups e Historial
-*** TODO Analizar si lo borro
-
-Tengo que analizar la posibilidad de eliminar los backups y el historial. No los uso.
-
 ** Backups
 
 - Establece la carpeta para guardar los backups
-- Desactiva el borrado de versiones viejas
-- Activa el control de versiones
-- Activa el backup de los archivos bajo control de versiones
-- Activa de guardado automático 
+- Activa el borrado de versiones viejas
+- Desactiva el control de versiones
+- Desactiva el backup de los archivos bajo control de versiones
+- Desactiva el guardado automático 
 
 #+BEGIN_SRC emacs-lisp
 (setq backup-directory-alist '(("." . "~/.emacs.d/backups")))
-(setq delete-old-versions -1)
-(setq version-control t)
-(setq vc-make-backup-files t)
+(setq delete-old-versions t)
+(setq version-control nil)
+(setq vc-make-backup-files nil)
 (setq auto-save-file-name-transforms '((".*" "~/.emacs.d/auto-save-list/" t)))
 #+END_SRC
 
@@ -111,7 +107,7 @@ Tengo que analizar la posibilidad de eliminar los backups y el historial. No los
 
 #+BEGIN_SRC emacs-lisp
 (setq savehist-file "~/.emacs.d/savehist")
-(savehist-mode 1)
+(savehist-mode t)
 (setq history-length t)
 (setq history-delete-duplicates t)
 (setq savehist-save-minibuffer-history 1)
