--- a/emacs-config.org
+++ b/emacs-config.org
@@ -119,7 +119,7 @@
   
 * Environment & Shells
 
-Cuando utilizo emacs en modo gráfico hay algunas variables del entorno que no están disponibles de la misma manera que cuando se usa desde la terminal.
+Cuando se utiliza emacs en modo gráfico hay algunas variables del entorno que no están disponibles de la misma manera que cuando se usa desde la terminal.
 
 ** Path
 
@@ -164,27 +164,31 @@ Emacs has a variable named exec-path. Its value is a list of dir paths. Emacs us
 
 ** Cut & Paste
 
-Cuando se utiliza en modo terminal hay que conectar el clipboard de Mac OS X con las funciones de cortar y pegar de Emacs.
+Cuando se utiliza en modo terminal hay que conectar las funciones de cortar y pegar de Emacs con el clipboard de Mac OS X.
 
 #+begin_src elisp
 (unless (display-graphic-p)
   (defun copy-from-osx ()
-    (shell-command-to-string "pbpaste"))
-  
+    "Handle copy/paste intelligently on OS X"
+    (let ((pbpaste (purecopy "/usr/bin/pbpaste")))
+      (if (and (eq system-type 'darwin)
+               (file-exists-p pbpaste))
+          (let ((tramp-mode nil)
+                (default-directory "~"))
+            (shell-command-to-string pbpaste)))))
   (defun paste-to-osx (text &optional push)
+    "Handle copy/paste intelligently on OS X"
     (let ((process-connection-type nil))
       (let ((proc (start-process "pbcopy" "*Messages*" "pbcopy")))
         (process-send-string proc text)
         (process-send-eof proc))))
-  
   (setq interprogram-cut-function 'paste-to-osx)
   (setq interprogram-paste-function 'copy-from-osx))
-
 #+end_src
 
 ** Tramp
 
-Con TRAMP se puede acceder desde emacs a cualquier archivo en servidores externos de manera transparente, como si estuviera en la máquina local. Emacs se baja por ssh el archivo a un buffer local y cada vez que uno hace cambios y lo guarda, sube los cambios al servidor remoto automáticamente.
+Con TRAMP se puede acceder a cualquier archivo en servidores remotos de manera transparente, como si estuviera en la máquina local. Emacs se baja por ssh el archivo a un buffer local y cada vez que uno hace cambios y lo guarda, sube los cambios al servidor remoto automáticamente.
 
 #+begin_src elisp
 (setq tramp-default-method "ssh")
@@ -1206,27 +1210,24 @@ Modifico la tecla "q" para que destruya el buffer cuando lo cierro.
 #+END_SRC
 
 * TODO Paquetes para evaluar
-** Stack Exchange
-
-https://github.com/vermiculus/sx.el
-
 ** Ledger mode + Org mode
 
 YouTube: Conquering Your Finances with Emacs and Ledger
 https://www.youtube.com/watch?v=cjoCNRpLanY&t=1155s
 
 ** Newsfeeds & Email in gnus
-** escreen
+** elscreen
 
 - https://github.com/knu/elscreen
 - https://github.com/wasamasa/eyebrowse
 
-** Indium: Javascript debugger 
+** Indium: Javascript debugger
 
 https://github.com/NicolasPetton/Indium
 
-** Company mode: Autocomplete para métodos 
+** Company mode: Autocomplete para métodos
 
 - Company mode: http://company-mode.github.io/
 - PHP: https://github.com/arnested/php-extras
 - JS: https://github.com/ScottyB/ac-js2
+  
